// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maybePrintBuildProfileDeprecationWarningsAsync multiple deprecation warnings prints the warnings 1`] = `
[
  [
    "Detected deprecated fields in eas.json:",
  ],
  [
    "	The "build.production.cache.customPaths" field in eas.json is deprecated and will be removed in the future. Please use "build.production.cache.paths" instead.",
  ],
  [
    "	[2mLearn more: [4mhttps://docs.expo.dev/build-reference/eas-json/#cache[24m[22m",
  ],
  [
    "	The "build.production.cache.cacheDefaultPaths" field in eas.json is deprecated and will be removed in the future.",
  ],
  [
    "	[2mLearn more: [4mhttps://docs.expo.dev/build-reference/caching/#ios-dependencies[24m[22m",
  ],
  [
    "	Other message",
  ],
]
`;

exports[`maybePrintBuildProfileDeprecationWarningsAsync one deprecation warning prints the warning 1`] = `
[
  [
    "Detected deprecated fields in eas.json:",
  ],
  [
    "	The "build.production.cache.customPaths" field in eas.json is deprecated and will be removed in the future. Please use "build.production.cache.paths" instead.",
  ],
  [
    "	[2mLearn more: [4mhttps://docs.expo.dev/build-reference/eas-json/#cache[24m[22m",
  ],
]
`;
